containers/multiapp/docker/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: multiapp-client
          image: drdre08/multi-client
          ports:
            - containerPort: 30001
